# dnchub-app

./: .gitignore  AUDIT_CONSISTENCY.md  AUDIT_DATA_INTEGRITY.md  AUDIT_DEAD_CODE.md  AUDIT_MISSING_IMPL.md  AUDIT_REPORT.md  AUDIT_SAAS_PAGES.md  AUDIT_SECURITY.md  README.md  package.json  turbo.json  vercel.json
backend/: .env.example  .gitignore  README.md  alembic.ini  migrate_mala_to_cases.py  pyproject.toml  railway.toml  test_db_connection.py  test_network.py  test_psycopg.py
backend/alembic/: env.py
backend/alembic/versions/: 20251212_150054_2be4e79def67_initial_migration.py  20251213_000001_add_tickets_table.py  20251214_113137_5fa7c6ca7595_add_fuel_pumps_and_fuel_pump_deliveries_.py  20251214_114141_0d964f7dc85d_fix_fueltype_enum_values_to_lowercase.py  20251214_121934_dad97592d91c_fix_all_enum_values_to_lowercase.py  20251214_181510_7cacf49b257f_add_appearance_settings_to_users.py  20251215_000001_add_is_default_to_fuel_pumps.py  20251215_000002_add_notification_preferences.py  20260112_000001_add_is_backoffice_to_drivers.py  20260121_000001_add_is_external_to_fuel_entries.py  20260310_000001_rename_driver_to_employee.py  20260312_160000_a7f76ee12c80_add_tool_management_module.py  20260401_152851_39ae89ae2feb_add_consumables_module.py  20260408_000000_f7a8b9c0d1e2_add_password_reset_to_users.py  20260414_170137_8458a52615f9_add_sat_module_tables.py
backend/app/: __init__.py  main.py
backend/app/core/: __init__.py  config.py  exceptions.py  security.py
backend/app/db/: base.py  (+2 more)
backend/tests/: conftest.py  test_auth.py  test_health.py  test_vehicles.py
(+320 files in other folders)
